# moda

./: .editorconfig  .env.example  .flake8  .gitattributes  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GOV-STUDIES-LOCK-002.md  GOVERNANCE_README.md  PROJECT_SETUP_ANALYSIS.md  PROJECT_SETUP_ANALYSIS_REPORT.md  README.md  STUDIES_ANALYSIS_REPORT.md  THIRD_PARTY_NOTICES.md  cleanup_duplicate_files.sh  cleanup_final_report.txt  cleanup_manifest.txt  coverage_report.txt  docker-compose.yml  env.example  licenses-node.json  package.json  pyproject.toml
.github/: CODEOWNERS  NOTIFICATIONS_README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  governance_task.md
.github/workflows/: budget-sentinel.yml  ci.yml  codeql.yml  commitlint.yml  conflict-guard.yml  dep-osv-scan.yml  frontend-ci.yml  gitleaks.yml  governance-claims-evidence.yml  governance-drift-guard.yml  governance-integrity.yml  governance-reality-test.yml  governance.yml  pr-size.yml  preflight-clean-release.yml  release-freeze.yml  release-pack.yml  root-clean.yml  runtime-guard.yml  security-gitleaks.yml  semantic-pr.yml  version-guard.yml
SECURITY/: SECRETS_PLAYBOOK.md
docs/: README.md
governance/: README.md  budget.sentinel.config.json  claims.config.json  drift_guard.config.json  preflight.config.json  reality_test.config.json  release_pack.config.json  runtime.guard.config.json
governance/active/: GOVERNANCE_FRAMEWORK.md
governance/baselines/: CLEAN_BASELINE.json  DOCMAP_BASELINE.json  REALITY_BASELINE.json
governance/budgets/: gpu.yaml
governance/rfc/: README.md  RFC-template.md
governance/slo/: slo.yaml
governance/studies/: boost_rules.yaml  matrix.md  registry.json  registry.schema.json  tagging_map.yaml
governance/training/: playbook.md  quiz.md
infrastructure/terraform/: backend.tf  main.tf  variables.tf
release/v1.0.0-RC1/: MANIFEST.md  rollback_plan.md  (+2 more)
requirements/: api.txt  ci.txt  dev.txt
scripts/: compliance_checker.py  governance_monitor.py  governance_reporter.py
studies/: MASTER_STUDIES_INDEX.md  README.md
tests/: __init__.py  conftest.py  test_health.py
(+126 files in other folders)
